# scolengo-token-tauri

./: .gitignore  README.md  package.json
.github/workflows/: main.yml
src/: index.html  main.js  styles.css  success.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: main.rs
