[package]
name = "scolengo-token-tauri"
version = "1.0.0"
description = "A Tauri App"
authors = ["orion"]
license = ""
repository = ""
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
base64_light = "0.1.5"
openidconnect = "3.3.0"
url = "2.4.0"
tauri-plugin-deep-link = "0.1.1"
settimeout = "0.1.2"
futures = "0.3.28"
portpicker = "0.1" # used in the example to pick a random free port
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
